# meridian

./: .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PRD.md  README.md  app_spec.example.xml  app_spec.txt  biome.json  brownfield_manifest.json  claw-forge.yaml  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  run.sh
apps/meridian-cli/: .coverage  pyproject.toml
apps/meridian-cli/.meridian/: workspace-audit.ndjson
apps/meridian-cli/src/meridian_cli/: __init__.py  __main__.py  _audit.py  _client.py  _resource.py  _telemetry.py  _version.py  agents.py  channels.py  cron.py  environments.py  files.py  hooks.py  imports.py  memory_stores.py  meridianconfig.py  meridianrun.py  sessions.py  skills.py  tui.py  user_profiles.py  vaults.py  webhooks.py  workspace.py
apps/meridian-cli/tests/: conftest.py  test_client.py  test_imports.py  test_meridianconfig.py  test_meridianconfig_migrate.py  test_meridianconfig_schema.py  test_meridianrun.py  test_resources.py  test_small_gaps.py  test_tui.py  test_tui_app.py  test_workspace.py
apps/meridiand/: .coverage  pyproject.toml  run_gateway.py  run_longpoll.py
apps/meridiand/.gateway-scratch/: audit.ndjson
apps/meridiand/.gateway-scratch/channel_pairings/ch_0c7f2861d5e547ad98e0cdf64108a7e9/: 9999.json
apps/meridiand/.gateway-scratch/channel_pairings/ch_1c686e1cefa64d5ea4479a1967d3a87c/: 2069029798.json
apps/meridiand/.gateway-scratch/channel_quarantine/ch_f4497182995841b498a0286a8a63c553/: _profile.json  quar_fc8b21730c35460587e7f9cbd4360890.json
apps/meridiand/.gateway-scratch/channel_sessions/ch_0c7f2861d5e547ad98e0cdf64108a7e9/: sess_df9cc781ec884e33af9c8a02fdfc3438.json
apps/meridiand/.gateway-scratch/channels/: ch_0c7f2861d5e547ad98e0cdf64108a7e9.json  ch_1c686e1cefa64d5ea4479a1967d3a87c.json  ch_f4497182995841b498a0286a8a63c553.json
apps/meridiand/.gateway-scratch/pairing_tokens/: pair_9af88bdf7e6548dda0ba2e034be0622c.json
apps/meridiand/src/meridiand/: __init__.py  __main__.py  _acp.py  _acp_compliance.py  _agent_responder.py  _agent_tool_server.py  _agent_tools.py  _agents.py  _app.py  _audit.py  _auth_middleware.py  _budget_exceeded.py  _budget_overrun_discipline.py  _budgets_reports.py  _cancel.py  _canvas_interactions.py  _channel_factory.py  _channel_inbound_sink.py  _channels.py  _checkpoint.py  _ci_regression.py  _cli_channel_driver.py  _cluster_extraction.py  _compaction.py  _config.py  _crash_recovery_soak.py  _credential_proxy.py  _cron.py  _cron_executor.py  _cron_scheduler.py  _cursor_middleware.py  _diagnosis.py  _discord_channel_driver.py  _e8_hardening_soak.py  _environments.py  _error_envelope_middleware.py  _event_translator.py  _events.py  _files.py  _handoff.py  (+65 more)
apps/meridiand/src/meridiand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/meridiand/tests/: _otel_shared.py  conftest.py  test_acp.py  test_acp_compliance.py  test_agent_responder.py  test_agent_tool_server.py  test_agent_tools.py  test_agents.py  test_app_factory.py  test_audit_signing.py  test_auth_middleware.py  test_budget_aggregation.py  test_budget_exceeded.py  test_budgets_reports.py  test_cancel.py  test_channel_factory.py  test_channel_inbound_sink.py  test_channel_pair.py  test_channels.py  test_checkpoint.py  test_ci_regression.py  test_cli_channel_driver.py  test_cluster_extraction.py  test_compaction.py  test_config.py  test_conformance.py  test_coverage_sweep.py  test_crash_recovery_soak.py  test_credential_proxy.py  test_cron.py  test_cron_executor.py  test_cron_scheduler.py  test_cursor_pagination.py  test_daemon.py  test_diagnosis.py  test_discord_channel_driver.py  test_e8_hardening_soak.py  test_environments.py  test_error_envelope_middleware.py  test_event_translator.py  (+77 more)
(+120 files in other folders)
