[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-cli"
version = "0.1.0"
description = "Meridian command-line interface"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "opentelemetry-api>=1.24",
    "meridian-core-errors>=0.1.0",
]

[project.scripts]
meridian = "meridian_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "opentelemetry-sdk>=1.24",
]

[tool.uv.sources]
meridian-core-errors = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../../packages/core-errors/src"]
