[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meridiand"
version = "0.1.0"
description = "Meridian system daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.24",
    "meridian-core-errors>=0.1.0",
    "meridian-storage-blob>=0.1.0",
    "meridian-storage-event-log>=0.1.0",
]

[project.scripts]
meridiand = "meridiand.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/core-errors/src",
    "../../packages/storage-blob/src",
    "../../packages/storage-event-log/src",
]
