[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meridiand"
version = "0.1.0"
description = "Meridian system daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.24",
    "meridian-core-errors>=0.1.0",
    "meridian-sdk-sandbox>=0.1.0",
    "meridian-kb-indexer>=0.1.0",
    "meridian-plugin-loader>=0.1.0",
    "meridian-sdk-capabilities>=0.1.0",
    "meridian-storage-blob>=0.1.0",
    "meridian-storage-event-log>=0.1.0",
    "meridian-storage-reposit>=0.1.0",
    "meridian-sdk-channel>=0.1.0",
    "meridian-sdk-provider>=0.1.0",
    "sqlite-vec>=0.1.6",
    "sqlean-py>=3.50.4",
    "jsonschema>=4.0",
    "pyrage>=1.0",
    "keyring>=24.0",
]

[project.scripts]
meridiand = "meridiand.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.24",
]

[tool.uv.sources]
meridian-core-errors = { workspace = true }
meridian-kb-indexer = { workspace = true }
meridian-plugin-loader = { workspace = true }
meridian-sdk-capabilities = { workspace = true }
meridian-storage-blob = { workspace = true }
meridian-storage-event-log = { workspace = true }
meridian-storage-reposit = { workspace = true }
meridian-sdk-channel = { workspace = true }
meridian-sdk-provider = { workspace = true }
meridian-sdk-sandbox = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/core-errors/src",
    "../../packages/knowledge-base-indexer/src",
    "../../packages/plugin-loader/src",
    "../../packages/sdk-capabilities/src",
    "../../packages/storage-blob/src",
    "../../packages/storage-event-log/src",
    "../../packages/storage-reposit/src",
    "../../packages/sdk-channel/src",
    "../../packages/sdk-provider/src",
    "../../packages/sdk-sandbox/src",
]
